--- a/LocalChatServerWeb/Views/Shared/_Layout.cshtml
+++ b/LocalChatServerWeb/Views/Shared/_Layout.cshtml
@@ -22,9 +22,16 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        @{
+                            if (User?.Identity?.IsAuthenticated ?? false)
+                            {
+                                <li class="nav-item">
+                                    <u>Welcome: @User.Identity.Name</u>
+                                    <a asp-controller="Account" asp-action="Logout" class="btn btn-danger">Logout</a>
+                                </li>
+
+                            }
+                        }
                     </ul>
                 </div>
             </div>
@@ -38,7 +45,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - LocalChatServerWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; Private Chat Server Service - <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
