--- a/LocalChatServerWeb/Views/Session/Chat.cshtml
+++ b/LocalChatServerWeb/Views/Session/Chat.cshtml
@@ -6,10 +6,7 @@
 @model ChatViewModel
 
 <style>
-    body {
-        background-color: #2C2F33;
-        color: #ffffff;
-    }
+    
 
     .card {
         background-color: #36393f;
@@ -18,7 +15,7 @@
 
     .card-header {
         background-color: #36393f;
-        border-bottom: none;
+        /* border-bottom: none; */
     }
 
     .card-body {
