--- a/LocalChatServerWeb/Views/Operations/Create.cshtml
+++ b/LocalChatServerWeb/Views/Operations/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model User
 
-<h1 class="bg-info text-white">Create User</h1>
+<h1 class="text-white">Create User</h1>
 <div asp-validation-summary="All" class="text-danger"></div>
 
 @if (ViewBag.Message != null)
@@ -16,5 +16,10 @@
         <label asp-for="Password"></label>
         <input asp-for="Password" class="form-control" />
     </div>
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-primary mt-3">Create</button>
 </form>
+
+<div class="mt-3">
+    <p>Have an account?</p>
+    <a asp-controller="Account" asp-action="Login" class="btn btn-info">Login</a>
+</div>
